--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -17,9 +17,5 @@ jobs:
       uses: actions/setup-python@v1
       with:
         python-version: ${{ matrix.python-version }}
-    - name: Lint with flake8
-      run: |
-        pip install wemake-python-styleguide
-        cat setup.cfg
-        pwd
-        flake8 .
+    - name: Lint with wemake-python-styleguide
+      uses: ./actions/wps
