--- a/.github/workflows/pythonpackage.yml
+++ b/.github/workflows/pythonpackage.yml
@@ -18,4 +18,4 @@ jobs:
       with:
         python-version: ${{ matrix.python-version }}
     - name: Lint with wemake-python-styleguide
-      uses: ./actions/wps
+      uses: ./.github/actions/wps
